// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`splitOnHeader splitOnHeader false 1`] = `
"@prefix rdf: <http://www.w3.org/1999/02/22-rdf-syntax-ns#> .
@prefix schema: <http://schema.org/> .
@prefix xsd: <http://www.w3.org/2001/XMLSchema#> .
@prefix rdfs: <http://www.w3.org/2000/01/rdf-schema#> .
@prefix ex: <http://example.org/> .
@prefix dot: <http://dottriples.org/> .
@prefix mark: <http://markdown.org/> .

_:b27 <http://my-vault.org/age> \\"37\\", \\"42\\" ;
	<http://my-vault.org/name> \\"Alice\\", \\"Bob\\", \\"Charlie\\" .

"
`;

exports[`splitOnHeader splitOnHeader true 1`] = `
"@prefix rdf: <http://www.w3.org/1999/02/22-rdf-syntax-ns#> .
@prefix schema: <http://schema.org/> .
@prefix xsd: <http://www.w3.org/2001/XMLSchema#> .
@prefix rdfs: <http://www.w3.org/2000/01/rdf-schema#> .
@prefix ex: <http://example.org/> .
@prefix dot: <http://dottriples.org/> .
@prefix mark: <http://markdown.org/> .

_:b28 dot:contains [
		dot:contains [
			<http://my-vault.org/age> \\"37\\" ;
			<http://my-vault.org/name> \\"Alice\\" ;
		], [
			<http://my-vault.org/age> \\"42\\" ;
			<http://my-vault.org/name> \\"Bob\\" ;
		], [
			<http://my-vault.org/name> \\"Charlie\\" ;
		] ;
	] .

"
`;

exports[`splitOnHeader splitOnHeader true addLabels true 1`] = `
"@prefix rdf: <http://www.w3.org/1999/02/22-rdf-syntax-ns#> .
@prefix schema: <http://schema.org/> .
@prefix xsd: <http://www.w3.org/2001/XMLSchema#> .
@prefix rdfs: <http://www.w3.org/2000/01/rdf-schema#> .
@prefix ex: <http://example.org/> .
@prefix dot: <http://dottriples.org/> .
@prefix mark: <http://markdown.org/> .

_:b33 dot:contains [
		schema:name \\"People\\" ;
		dot:contains [
			schema:name \\"Alice\\" ;
			<http://my-vault.org/age> \\"37\\" ;
			<http://my-vault.org/name> \\"Alice\\" ;
		], [
			schema:name \\"Bob\\" ;
			<http://my-vault.org/age> \\"42\\" ;
			<http://my-vault.org/name> \\"Bob\\" ;
		], [
			schema:name \\"Charlie\\" ;
			<http://my-vault.org/name> \\"Charlie\\" ;
		] ;
	] .

<http://my-vault.org/age> schema:name \\"age\\" .

<http://my-vault.org/name> schema:name \\"name\\" .

"
`;

exports[`splitOnId splitOnId false 1`] = `
"@prefix rdf: <http://www.w3.org/1999/02/22-rdf-syntax-ns#> .
@prefix schema: <http://schema.org/> .
@prefix xsd: <http://www.w3.org/2001/XMLSchema#> .
@prefix rdfs: <http://www.w3.org/2000/01/rdf-schema#> .
@prefix ex: <http://example.org/> .
@prefix dot: <http://dottriples.org/> .
@prefix mark: <http://markdown.org/> .

_:b20 <foaf:knows> _:Alison, _:Alice .

"
`;

exports[`splitOnId splitOnId true 1`] = `
"@prefix rdf: <http://www.w3.org/1999/02/22-rdf-syntax-ns#> .
@prefix schema: <http://schema.org/> .
@prefix xsd: <http://www.w3.org/2001/XMLSchema#> .
@prefix rdfs: <http://www.w3.org/2000/01/rdf-schema#> .
@prefix ex: <http://example.org/> .
@prefix dot: <http://dottriples.org/> .
@prefix mark: <http://markdown.org/> .

_:b21 dot:contains [
		<foaf:knows> _:Alison ;
	], [
		<foaf:knows> _:Alice ;
	] .

"
`;

exports[`splitOnId splitOnId true addLabels true 1`] = `
"@prefix rdf: <http://www.w3.org/1999/02/22-rdf-syntax-ns#> .
@prefix schema: <http://schema.org/> .
@prefix xsd: <http://www.w3.org/2001/XMLSchema#> .
@prefix rdfs: <http://www.w3.org/2000/01/rdf-schema#> .
@prefix ex: <http://example.org/> .
@prefix dot: <http://dottriples.org/> .
@prefix mark: <http://markdown.org/> .

_:b24 dot:contains [
		schema:name \\"Alice\\" ;
		<foaf:knows> _:Alison ;
	], [
		schema:name \\"Alison\\" ;
		<foaf:knows> _:Alice ;
	] .

<foaf:knows> schema:name \\"foaf:knows\\" .

"
`;

exports[`splitOnTag splitOnTag false 1`] = `
"@prefix rdf: <http://www.w3.org/1999/02/22-rdf-syntax-ns#> .
@prefix schema: <http://schema.org/> .
@prefix xsd: <http://www.w3.org/2001/XMLSchema#> .
@prefix rdfs: <http://www.w3.org/2000/01/rdf-schema#> .
@prefix ex: <http://example.org/> .
@prefix dot: <http://dottriples.org/> .
@prefix mark: <http://markdown.org/> .

_:b13 dot:tag \\"person\\" ;
	<http://my-vault.org/age> \\"37\\", \\"42\\" ;
	<http://my-vault.org/name> \\"Alice\\", \\"Bob\\", \\"Charlie\\" .

"
`;

exports[`splitOnTag splitOnTag true 1`] = `
"@prefix rdf: <http://www.w3.org/1999/02/22-rdf-syntax-ns#> .
@prefix schema: <http://schema.org/> .
@prefix xsd: <http://www.w3.org/2001/XMLSchema#> .
@prefix rdfs: <http://www.w3.org/2000/01/rdf-schema#> .
@prefix ex: <http://example.org/> .
@prefix dot: <http://dottriples.org/> .
@prefix mark: <http://markdown.org/> .

_:b14 dot:contains [
		dot:tag \\"person\\" ;
		<http://my-vault.org/age> \\"37\\" ;
		<http://my-vault.org/name> \\"Alice\\" ;
	], [
		dot:tag \\"person\\" ;
		<http://my-vault.org/age> \\"42\\" ;
		<http://my-vault.org/name> \\"Bob\\" ;
	] ;
	<http://my-vault.org/name> \\"Charlie\\" .

"
`;

exports[`splitOnTag splitOnTag true addLabels true 1`] = `
"@prefix rdf: <http://www.w3.org/1999/02/22-rdf-syntax-ns#> .
@prefix schema: <http://schema.org/> .
@prefix xsd: <http://www.w3.org/2001/XMLSchema#> .
@prefix rdfs: <http://www.w3.org/2000/01/rdf-schema#> .
@prefix ex: <http://example.org/> .
@prefix dot: <http://dottriples.org/> .
@prefix mark: <http://markdown.org/> .

_:b17 dot:contains [
		schema:name \\"Alice\\" ;
		dot:tag \\"person\\" ;
		<http://my-vault.org/age> \\"37\\" ;
		<http://my-vault.org/name> \\"Alice\\" ;
	], [
		schema:name \\"Bob\\" ;
		dot:tag \\"person\\" ;
		<http://my-vault.org/age> \\"42\\" ;
		<http://my-vault.org/name> \\"Bob\\" ;
	] ;
	<http://my-vault.org/name> \\"Charlie\\" .

<http://my-vault.org/age> schema:name \\"age\\" .

<http://my-vault.org/name> schema:name \\"name\\" .

"
`;

exports[`toRDF BlockIds 1`] = `
"@prefix rdf: <http://www.w3.org/1999/02/22-rdf-syntax-ns#> .
@prefix schema: <http://schema.org/> .
@prefix xsd: <http://www.w3.org/2001/XMLSchema#> .
@prefix rdfs: <http://www.w3.org/2000/01/rdf-schema#> .
@prefix ex: <http://example.org/> .
@prefix dot: <http://dottriples.org/> .
@prefix mark: <http://markdown.org/> .

_:b4 dot:contains [
		<http://my-vault.org/description> \\"Section 1\\" ;
		dot:related <Bob\\\\u0020Details/2> ;
	], [
		<http://my-vault.org/description> \\"Section 2\\" ;
		dot:related <Bob\\\\u0020Details/3\\\\u0020> ;
	], [
		<http://my-vault.org/description> \\"Section 3\\" ;
		dot:related <Unknown/1> ;
	] ;
	<http://my-vault.org/description> \\"Section 4\\" ;
	dot:tag \\"Section\\" .

"
`;

exports[`toRDF Inline fields 1`] = `
"@prefix rdf: <http://www.w3.org/1999/02/22-rdf-syntax-ns#> .
@prefix schema: <http://schema.org/> .
@prefix xsd: <http://www.w3.org/2001/XMLSchema#> .
@prefix rdfs: <http://www.w3.org/2000/01/rdf-schema#> .
@prefix ex: <http://example.org/> .
@prefix dot: <http://dottriples.org/> .
@prefix mark: <http://markdown.org/> .

_:b12 <http://my-vault.org/inline> \\"field\\" ;
	<http://my-vault.org/thoughts> \\"It was decent.\\" ;
	<http://my-vault.org/rating> \\"6'\\" .

<http://my-vault.org/subject> <http://my-vault.org/inline> \\"field\\" ;
	<http://my-vault.org/thoughts> \\"It was decent.\\" ;
	<http://my-vault.org/rating> \\"6\\" .

<http://my-vault.org/too> <http://my-vault.org/many> \\"inline\\" .

_:Bob <foaf:knows> _:Alice .

"
`;

exports[`toRDF Links 1`] = `
"@prefix rdf: <http://www.w3.org/1999/02/22-rdf-syntax-ns#> .
@prefix schema: <http://schema.org/> .
@prefix xsd: <http://www.w3.org/2001/XMLSchema#> .
@prefix rdfs: <http://www.w3.org/2000/01/rdf-schema#> .
@prefix ex: <http://example.org/> .
@prefix dot: <http://dottriples.org/> .
@prefix mark: <http://markdown.org/> .

_:b2 <http://my-vault.org/has-image> <http://my-vault.org/../houses/img.png> ;
	dot:related _:link 1, _:/full/path/link 1, _:/full/path/link 1.md, <http://example.com>, _:link 1 , <http://my-vault.org/protocol>, <https://example2.com> .

"
`;

exports[`toRDF Outline 1`] = `
"@prefix rdf: <http://www.w3.org/1999/02/22-rdf-syntax-ns#> .
@prefix schema: <http://schema.org/> .
@prefix xsd: <http://www.w3.org/2001/XMLSchema#> .
@prefix rdfs: <http://www.w3.org/2000/01/rdf-schema#> .
@prefix ex: <http://example.org/> .
@prefix dot: <http://dottriples.org/> .
@prefix mark: <http://markdown.org/> .
"
`;

exports[`toRDF People 1`] = `
"@prefix rdf: <http://www.w3.org/1999/02/22-rdf-syntax-ns#> .
@prefix schema: <http://schema.org/> .
@prefix xsd: <http://www.w3.org/2001/XMLSchema#> .
@prefix rdfs: <http://www.w3.org/2000/01/rdf-schema#> .
@prefix ex: <http://example.org/> .
@prefix dot: <http://dottriples.org/> .
@prefix mark: <http://markdown.org/> .

_:b8 <http://my-vault.org/number> \\"42\\" ;
	<http://my-vault.org/age> \\"42\\", \\"56\\" .

"
`;

exports[`toRDF Yaml 1`] = `
"@prefix rdf: <http://www.w3.org/1999/02/22-rdf-syntax-ns#> .
@prefix schema: <http://schema.org/> .
@prefix xsd: <http://www.w3.org/2001/XMLSchema#> .
@prefix rdfs: <http://www.w3.org/2000/01/rdf-schema#> .
@prefix ex: <http://example.org/> .
@prefix dot: <http://dottriples.org/> .
@prefix mark: <http://markdown.org/> .

_:b9 dot:tag \\"cats\\", \\"dogs\\" ;
	<http://my-vault.org/date-updated> \\"2021-08-05T17:10:34+02:00\\" ;
	<http://my-vault.org/one> \\"Two\\", [
		<http://my-vault.org/0> \\"Two\\" ;
		<http://my-vault.org/1> [
			<http://my-vault.org/three> \\"Other\\" ;
		] ;
	] .

"
`;

exports[`toRDF code fence 1`] = `
"@prefix rdf: <http://www.w3.org/1999/02/22-rdf-syntax-ns#> .
@prefix schema: <http://schema.org/> .
@prefix xsd: <http://www.w3.org/2001/XMLSchema#> .
@prefix rdfs: <http://www.w3.org/2000/01/rdf-schema#> .
@prefix ex: <http://example.org/> .
@prefix dot: <http://dottriples.org/> .
@prefix mark: <http://markdown.org/> .
"
`;
